[project]
name = "rasptank-server"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi (==0.95.2)",
    "uvicorn (==0.20.0)",
    "pydantic (==1.10.13)",
    "ruff (>=0.15.2,<0.16.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
